--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,11 @@ where = ["src"]
 [tool.setuptools.package-data]
 rpa_speckit = [
     "templates/**/*",
-    "templates/constitution.md"
+    "memory/constitution.md",
+    "templates/spec-template.md",
+    "templates/tests-template.md",
+    "templates/selectors-template.md",
+    "templates/business-rules-template.md",
+    "templates/tasks-template.md"
 ]
 
